<resources>
    <string name="app_name">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First fragment</string>
    <string name="replace">replace</string>
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="demo_fragments">demo fragments</string>
    <string name="sign_in_app">sign in app</string>
    <string name="fragment_deprecated">fragment_deprecated</string>
    <string name="hello_from_second_fragment">Hello from second fragment</string>
    <string name="backstack">Backstack</string>
    <string name="open_process">open process</string>
    <string name="next">Next</string>
    <string name="enter_name">Enter name</string>
    <string name="attach_detach">attach detach</string>
    <string name="select_image">select image</string>
    <string name="name">Name</string>
    <string name="img1">1</string>
    <string name="img2">2</string>
    <string name="change_name">change name</string>
    <string name="change_image">change image</string>
    <string name="finish">finish</string>
</resources>