<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemoFragments">

    <fragment
        android:id="@+id/deprec_fragment"
        android:name="com.example.fragments.FirstFragment"
        tools:layout="@layout/fragment_first"
        android:label="@string/fragment_deprecated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/test_frag_container"
        android:layout_width="match_parent"
        android:tag="test_tag"
        android:layout_height="40dp"
        tools:layout="@layout/fragment_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/test_frag_container"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/replace_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_frag_container" />

    <Button
        android:id="@+id/remove_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        app:layout_constraintTop_toBottomOf="@id/test_frag_container"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/show_backstack_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backstack"
        app:layout_constraintBottom_toTopOf="@+id/show_backstack_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/show_backstack_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="show backstack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>